tests/invalids/invalidArray1.gt
proc main ()
    int a[]
begin 
    read m;
end
